# midi_seq_poc_py

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: README.md
midi_seq_txt/: app.py  app.tcss  cli.py  configs.py  const.py  engine.py  functionalities.py  init.py  presets.py  sequencer.py  sequencers.py  ui.py  ui.tcss
presets/: README.md
presets/MFunctionality/: GeVo1.yaml  GeVo2.yaml  VBCuEgIn.yaml
presets/MInFunctionality/: GeVo1.yaml  GeVo1In.yaml  GeVo2.yaml  GeVo2In.yaml  GeVoIn.yaml  MidiClockIn.yaml  VBCuEgIn.yaml
presets/MMappings/: Generic_4_map.yaml  MMappings_00.yaml  MMappings_01.yaml  Mappings_00.yaml  Mappings_01.yaml  Volca_DBKF_map.yaml
presets/MMusic/: Empty.yaml  Music_00.yaml
presets/MOutFunctionality/: GeVo1Out.yaml  GeVo2Out.yaml  VBCutEGIOut.yaml
scripts/: deploy_code.sh
tests/: conftest.py  test_ui.py
