[tool.poetry]
name = "midi-seq-txt"
version = "0.1.0"
description = "Textual interface with 16 keys to control a MIDI sequencer"
authors = ["Pawel Matykiewicz <pawel.matykiewicz@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
midi_seq = "midi_seq_txt.cli:main"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12.0"
textual = "^0.52.1"
attrs = "^23.2.0"
mingus = "^0.6.1"
python-rtmidi = "^1.5.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.9.0"
pytest-asyncio = "^0.23.5.post1"
pytest-cov = "^4.1.0"
coverage = "^7.4.4"

[tool.mypy]
files = "midi_seq_txt, tests"
ignore_missing_imports = true
check_untyped_defs = true

[tool.isort]
multi_line_output = 3
line_length = 100
include_trailing_comma = true

[tool.black]
line_length = 100

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.paths]
source = ["midi_seq_txt"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
